--- a/index.html
+++ b/index.html
@@ -8,14 +8,26 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <!--
+    Top header
+    - `.top-header` is the white bar across the top of the page.
+    - `.header-inner` groups the left brand and the right user box and uses
+      `justify-content: space-between` to keep them at opposite ends.
+    - Leave only the logo on the left; the right side contains the user's
+      avatar, name and a dental icon.
+  -->
   <header class="top-header">
     <div class="header-inner">
+      <!-- Brand/logo on the left -->
       <div class="brand">
         <img src="the_leadership_thread_logo.png" alt="The Leadership Thread logo">
       </div>
+
+      <!-- User area on the right: avatar, name, dental icon -->
       <div class="user-box">
         <img src="person.png" alt="User avatar" class="avatar">
         <span class="user-name">Dr. John Doe</span>
+        <!-- dental.png is a decorative/brand icon used in the header -->
         <img src="dental.png" alt="dental" class="dental-icon">
       </div>
     </div>
@@ -23,9 +35,22 @@
 
   <main class="page-wrap">
     <section class="form-card">
+      <!--
+        Main form card
+        - `.profile-form` contains the entire form area (dark panel).
+        - The layout uses CSS Grid for two-column rows via `.two-col`.
+        - All form controls are native HTML inputs/selects; no JS required.
+      -->
       <form class="profile-form" novalidate>
+        <!-- Primary heading for the form -->
         <h1 class="form-heading">Create Your Profile</h1>
 
+        <!--
+          Name row (two-column)
+          - `.grid.two-col` sets a two-column grid; each `.form-group` stacks
+            the label (class `.sr-label`) above its control.
+          - Labels are visually styled but kept semantic to help screen readers.
+        -->
         <div class="form-section">
           <label class="section-label">Your Name</label>
           <div class="grid two-col">
@@ -42,6 +67,7 @@
           </div>
         </div>
 
+        <!-- Contact details (two-column) -->
         <div class="form-section">
           <label class="section-label">Contact Details</label>
           <div class="grid two-col">
@@ -58,6 +84,7 @@
           </div>
         </div>
 
+        <!-- Role & specialty (two-column) + producer checkbox -->
         <div class="form-section">
           <label class="section-label">Select Primary Role</label>
           <div class="grid two-col">
@@ -83,6 +110,7 @@
             </div>
           </div>
 
+          <!-- Producer checkbox is separate and spans the full width -->
           <div class="producer-row">
             <label class="producer">
               <input type="checkbox" name="producer">
@@ -91,6 +119,7 @@
           </div>
         </div>
 
+        <!-- Location selectors (two-column) -->
         <div class="form-section">
           <label class="section-label">Select Location</label>
           <div class="grid two-col">
@@ -111,6 +140,10 @@
           </div>
         </div>
 
+        <!-- Action buttons
+             - `Cancel` is a neutral/outline action.
+             - `Submit` is the primary action styled with the blue color.
+        -->
         <div class="form-actions">
           <button type="button" class="btn btn-cancel">Cancel</button>
           <button type="submit" class="btn btn-submit">Submit</button>
